tests/snapshots/cli__plain_values_u16.snap
---
source: tests/cli.rs
expression: "plain(&[\"--tensor\", \"model.layers.0.mlp.down_proj.weight\", \"--values\"])"
---
Values: model.layers.0.mlp.down_proj.weight                                                                          [×]
File: [FIXTURE]
U16 (3, 4, 5) → edges: all 4 of 4 rows × all 5 of 5 cols (indices shown)
mean 15419.0000 · std 8901.5046 · zeros 0%  (<time>)
slice 0 of 3 (fixed leading index) — [ ] step · / index or %

           0     1     2     3     4
     0   256   770  1284  1798  2312
     1  2826  3340  3854  4368  4882
     2  5396  5910  6424  6938  7452
     3  7966  8480  8994  9508 10022

m heatmap · ← → first/last cols · ↑ ↓ first/last rows · +Shift one end · [ ] slice · / index or % · d dtype · r reshape
· e window · z zebra: rows · b base: dec · c copy · y copy cmd · l legend · Space commands · ⌫ back · \ fwd · any other
key to return...
























                                                                                                              read-only
