tests/snapshots/cli__print_tensors_text_verbose.snap
---
source: tests/cli.rs
expression: "export(&[\"--print-tensors\", \"-v\"])"
---
lm_head.weight [I32, (2, 4), 32 B]  ← [FIXTURE]
model.embed_tokens.weight [F16, (6, 4), 48 B]  ← [FIXTURE]
model.layers.0.input_layernorm.weight [F32, (4), 16 B]  ← [FIXTURE]
model.layers.0.mlp.down_proj.weight [U16, (3, 4, 5), 120 B]  ← [FIXTURE]
model.layers.0.self_attn.q_proj.weight [BF16, (4, 4), 32 B]  ← [FIXTURE]
model.norm.weight [F32, (4), 16 B]  ← [FIXTURE]
model.scale.u8 [U8, (8), 8 B]  ← [FIXTURE]
