tests/snapshots/cli__print_tree_json_verbose.snap
---
source: tests/cli.rs
expression: "export(&[\"--print-tree\", \"--format\", \"json\", \"-v\"])"
---
{
  "metadata": {
    "total_size": 272
  },
  "weight_map": {
    "lm_head.weight": "[FIXTURE]",
    "model.embed_tokens.weight": "[FIXTURE]",
    "model.layers.0.input_layernorm.weight": "[FIXTURE]",
    "model.layers.0.mlp.down_proj.weight": "[FIXTURE]",
    "model.layers.0.self_attn.q_proj.weight": "[FIXTURE]",
    "model.norm.weight": "[FIXTURE]",
    "model.scale.u8": "[FIXTURE]"
  },
  "tensors": {
    "lm_head.weight": {
      "dtype": "I32",
      "shape": [
        2,
        4
      ],
      "num_elements": 8,
      "size_bytes": 32
    },
    "model.embed_tokens.weight": {
      "dtype": "F16",
      "shape": [
        6,
        4
      ],
      "num_elements": 24,
      "size_bytes": 48
    },
    "model.layers.0.input_layernorm.weight": {
      "dtype": "F32",
      "shape": [
        4
      ],
      "num_elements": 4,
      "size_bytes": 16
    },
    "model.layers.0.mlp.down_proj.weight": {
      "dtype": "U16",
      "shape": [
        3,
        4,
        5
      ],
      "num_elements": 60,
      "size_bytes": 120
    },
    "model.layers.0.self_attn.q_proj.weight": {
      "dtype": "BF16",
      "shape": [
        4,
        4
      ],
      "num_elements": 16,
      "size_bytes": 32
    },
    "model.norm.weight": {
      "dtype": "F32",
      "shape": [
        4
      ],
      "num_elements": 4,
      "size_bytes": 16
    },
    "model.scale.u8": {
      "dtype": "U8",
      "shape": [
        8
      ],
      "num_elements": 8,
      "size_bytes": 8
    }
  }
}
